fix problem with menu not showing

--- a/src/styles/main-menu.scss
+++ b/src/styles/main-menu.scss
@@ -6,7 +6,7 @@
   top: 0;
   left: 0;
   height: 100vh;
-  z-index: -10;
+  z-index: 0;
 }
 
 .openButton {
